# ElectronicVoting

./: CMakeLists.txt  Makefile  README  elections.cpp  main.cpp  runelection.cpp
Files/: FileOperations.cpp  FileOperations.h
Functions/: Assigner.cpp  Assigner.h  Implementator.cpp  Implementator.h  Parser.cpp  Parser.h  Validator.cpp  Validator.h
Structures/: BloomFilter.cpp  BloomFilter.h  Fenrir.cpp  Fenrir.h  IdentityCardList.cpp  IdentityCardList.h  PCList.cpp  PCList.h  RBTree.cpp  RBTree.h  Voter.cpp  Voter.h
